--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cadastro — Mariah Store</title>
+  <title>Cadastro — Élan Mode</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="login-page">
@@ -18,18 +18,28 @@
           <label for="fullname">Nome completo</label>
           <input type="text" id="fullname" required />
         </div>
+
         <div class="input-group">
           <label for="email">E-mail</label>
           <input type="email" id="email" required />
+          <p id="email-error" class="error-message"></p>
         </div>
+
+        <div class="input-group">
+          <label for="telefone">Telefone</label>
+          <input type="text" id="telefone" placeholder="Ex: 11999990000" required minlength="8" />
+        </div>
+
         <div class="input-group">
           <label for="signup-password">Senha</label>
           <input type="password" id="signup-password" required minlength="6" />
         </div>
+
         <div class="input-group">
           <label for="confirm-password">Confirmar senha</label>
           <input type="password" id="confirm-password" required minlength="6" />
         </div>
+
         <button type="submit" class="btn-login">Criar conta</button>
       </form>
       
@@ -39,41 +49,73 @@
     </div>
   </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const form = document.getElementById('signup-form');
-      if (form) {
-        form.addEventListener('submit', function (e) {
-          e.preventDefault();
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const form = document.getElementById('signup-form');
 
-          const fullname = document.getElementById('fullname').value.trim();
-          const email = document.getElementById('email').value.trim();
-          const password = document.getElementById('signup-password').value;
-          const confirmPassword = document.getElementById('confirm-password').value;
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
 
-          // Validações simples
-          if (!fullname || !email || !password) {
-            alert('⚠ Por favor, preencha todos os campos.');
+    const fullname = document.getElementById('fullname').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const telefone = document.getElementById('telefone').value.trim();
+    const password = document.getElementById('signup-password').value;
+    const confirmPassword = document.getElementById('confirm-password').value;
+
+    // Limpa mensagens de erro antes de validar novamente
+    const emailError = document.getElementById("email-error");
+    emailError.style.display = "none";
+    emailError.innerText = "";
+
+    if (password !== confirmPassword) {
+      alert('⚠ As senhas não coincidem.');
+      return;
+    }
+
+    const cliente = {
+      nome: fullname,
+      email: email,
+      telefone: telefone,
+      senha: password
+    };
+
+    try {
+      const response = await fetch("http://localhost:8080/clientes", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(cliente)
+      });
+
+      if (!response.ok) {
+        const errorText = await response.text();
+        try {
+          const errorJson = JSON.parse(errorText);
+
+          // Email duplicado?
+          if (errorJson.status === 409) {
+            emailError.innerText = "E-mail já está em uso.";
+            emailError.style.display = "block";
             return;
           }
 
-          if (password !== confirmPassword) {
-            alert('⚠ As senhas não coincidem.');
-            return;
-          }
-
-          if (password.length < 6) {
-            alert('⚠ A senha deve ter pelo menos 6 caracteres.');
-            return;
-          }
-
-          // Simula cadastro bem-sucedido
-          localStorage.setItem('loggedInUser', fullname);
-          alert('✅ Conta criada com sucesso! Bem-vindo(a), ' + fullname + '!');
-          window.location.href = 'index.html';
-        });
+          alert("❌ " + errorJson.message);
+        } catch {
+          alert("❌ Erro ao criar conta.");
+        }
+        return;
       }
-    });
-  </script>
+
+      alert("✅ Conta criada com sucesso!");
+      window.location.href = "index.html";
+
+    } catch (error) {
+      alert("❌ Erro ao conectar com o servidor.");
+      console.error(error);
+    }
+  });
+});
+</script>
+
+
 </body>
 </html>
